--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" />   
 </head>
-
 <body>
     <!-- header -->
-    <div class="mainBody">
+    <main class="mainBody">
         <nav>
-            <div class="nav-container">
-                <div class="logo">
+            <ul class="nav-container">
+                <li class="logo">
                     <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/flipkart-plus_8d85f4.png"
                         alt="logo">
-                </div>
-                <div class="search">
-                    <div class="search-container">
+                </li>
+                <li class="search">
+                    <a class="search-container">
                         <input type="text" class="search-box" placeholder="Search for products, brands and more">
                         <button class="search-btn">
                             <svg width="20" height="20" viewBox="0 0 17 18" class="" xmlns="http://www.w3.org/2000/svg">
@@ -41,22 +40,22 @@
                                 </g>
                             </svg>
                         </button>
-                    </div>
-                </div>
-                <div class="login">
+                    </a>
+                </li>
+                <li class="login">
                     <button>Login</button>
-                </div>
-                <div class="become-seller">
+                </li>
+                <li class="become-seller">
                     Become a Seller
-                </div>
-                <div class="more">
+                </li>
+                <li class="more">
                     More
                     <svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg" class="zZ3yfL">
                         <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                             class="_2gTTdy"></path>
                     </svg>
-                </div>
-                <div class="cart">
+                </li>
+                <li class="cart">
                     <svg class="cart-icon" width="14" height="14" viewBox="0 0 16 16"
                         xmlns="http://www.w3.org/2000/svg">
                         <path class="_1bS9ic"
@@ -64,63 +63,71 @@
                             fill="#fff"></path>
                     </svg>
                     Cart
-                </div>
-            </div>
+                </li>
+            </ul>
         </nav>
         <section class="section-1">
-            <div class="section-1-container">
-                <div class="section-1-item">
+            <ul class="section-1-container">
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100" alt="">
                     Grocery
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100" alt="">
                     Mobiles & Tablets
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/c12afc017e6f24cb.png?q=100" alt="">
                     Fashion
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="">
                     Electronics
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/a11d5d13e54bf964.png?q=100" alt="">
                     Fashion
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100" alt="">
                     Home
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100" alt="">
                     Appliances
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100" alt="">
                     Travel
-                </div>
-                <div class="section-1-item">
+                </li>
+                <li class="section-1-item">
                     <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
                     Top Offers
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
-        <!-- section 1 -->
-        <div class="main">
-            <div class="dummy">
-                
-
-                <!-- section 2 -->
-
-                <section class="section-2 container">
-                    <div class="section-2-container">
-                        <img src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
-                    </div>
-                </section>
-
-                <!-- section 3 -->
+        <!-- section 2 -->
+        <div class="main">    
+            <section class="section-2 container">
+                <div class="slider">
+                    <a href="#" class="btn-container btn-left" onclick="left()">
+                        <button class="btn"><i class="fa-solid fa-arrow-left"></i></button>
+                    </a>
+                    <a href="#" class="slider-image">
+                        <img class="slider-img" src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
+                        <img class="slider-img" src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
+                        <img class="slider-img" src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
+                        <img class="slider-img" src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
+                        <img class="slider-img" src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
+                        <img class="slider-img" src="https://rukminim1.flixcart.com/fk-p-flap/3376/560/image/a3f983c5ee21167e.jpg?q=50">
+                    </a>
+                    <a href="#" class="btn-container btn-right" onclick="right()">
+                        <button class="btn"><i class="fa-solid fa-arrow-right"></i></button>
+                    </a>
+                </div>
+            </section>
+           
+                <!-- section 4 -->
                 <section class="section-4 container">
                     <div class="section-4-container">
                         <div class="section-4-offers">
@@ -131,80 +138,77 @@
                                     src="https://rukminim1.flixcart.com/fk-p-flap/278/278/image/1e483f8045ec13a8.jpg?q=90">
                             </div>
                         </div>
-                        <div class="section-4-list">
-                            <div class="section-4-item">
+                        <ul class="section-4-list">
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/kn0n6a80/remote-control-toy/i/t/l/mini-racing-4-channel-radio-control-rc-car-miss-chief-original-imagfs8264ewfmnw.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Remote Control Toys</div>
-                                <div class="section-4-item-price">Min 50% Off</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Remote Control Toys</p>
+                                <p class="section-4-item-price">Min 50% Off</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/kjuby4w0/deodorant/v/c/d/400-one8-intense-fresh-deo-pack-of-2-200ml-x-2-2-perfume-body-original-imafzbn4nv2zhccp.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Deodorants</div>
-                                <div class="section-4-item-price">Up 60% Off</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Deodorants</p>
+                                <p class="section-4-item-price">Up 60% Off</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/l51d30w0/television/1/k/j/-original-imagfsyu8nrz5gzg.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Smart Tv</div>
-                                <div class="section-4-item-price">Min 50% Off</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Smart Tv</p>
+                                <p class="section-4-item-price">Min 50% Off</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/khuvxjk0-0/mouse/l/t/6/zeb-transformer-m-zebronics-original-imafxrugfftphbkk.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Top Smart TVs</div>
-                                <div class="section-4-item-price">Buy Now</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Top Smart TVs</p>
+                                <p class="section-4-item-price">Buy Now</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/kpft18w0/action-figure/w/l/m/iron-man-pvc-solar-bobble-head-in-standing-position-avenger-red-original-imag3njyfnkyaskf.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Gaming Mouse</div>
-                                <div class="section-4-item-price">From ₹299</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Gaming Mouse</p>
+                                <p class="section-4-item-price">From ₹299</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/kx50gi80/pen/h/z/k/119766-flair-original-imag9nzubznagufg.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Top Selling Stationary</div>
-                                <div class="section-4-item-price">From ₹49</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Top Selling Stationary</p>
+                                <p class="section-4-item-price">From ₹49</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/kjom6q80-0/microphone-accessory/n/i/0/3-5mm-clip-microphone-for-youtube-collar-mic-for-voice-recording-original-imafz7ykspmdv3vw.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Microphones</div>
-                                <div class="section-4-item-price">Up to 70% Off</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                            <div class="section-4-item">
+                                <p class="section-4-item-head">Microphones</p>
+                                <p class="section-4-item-price">Up to 70% Off</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                            <li class="section-4-item">
                                 <img src="https://rukminim1.flixcart.com/image/400/400/jlph9jk0/cycle/h/f/k/skyper-26t-sskp26bk0001-16-hero-original-imaf8ru5xysfgtmx.jpeg?q=70"
                                     alt="">
-                                <div class="section-4-item-head">Premium Cycle</div>
-                                <div class="section-4-item-price">Up to 40% Off</div>
-                                <div class="section-4-item-explore">Explore Now!</div>
-                            </div>
-                        </div>
+                                <p class="section-4-item-head">Premium Cycle</p>
+                                <p class="section-4-item-price">Up to 40% Off</p>
+                                <p class="section-4-item-explore">Explore Now!</p>
+                            </li>
+                        </ul>
                     </div>
                 </section>
 
-                <!-- section 4 -->
+                <!-- section 5 -->
                 <section class="section-5 container">
                     <img src="https://rukminim1.flixcart.com/fk-p-flap/960/960/image/066cd2653e7da532.jpg?q=50" alt="">
                     <img src="https://rukminim1.flixcart.com/fk-p-flap/960/960/image/bebf09a2d780b2a1.jpg?q=50" alt="">
                     <img src="https://rukminim1.flixcart.com/fk-p-flap/960/960/image/283c691164f4088b.jpg?q=50" alt="">
                 </section>
-            </div>
-            <!--  -->
             <!-- footer -->
         </div>
 
         <footer>
-
             <div class="footer-row">
                 <div class="footer-col-1">
                     <div class="footer-heading">
@@ -311,11 +315,9 @@
                 </div>
             </div>
         </footer>
-    </div>
-
+    </main>
+<script src="index.js"></script>
 </body>
-
 </html>
 </body>
-
 </html>
