--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
             </section> -->
 
-            <div class="imageSliderContainer">
+            <div class="imageSliderContainer container">
                 <div class="imageSliderBtn">
                     <button id="preve_imageBtn">
                         <i class="fa-solid fa-angle-left"></i>
